--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
