--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lucide-react": "^0.363.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
-    "next": "14.1.4",
+    "next": "^14.2.1",
     "next-cloudinary": "^6.5.0",
     "qs": "^6.12.0",
     "react": "^18",
